# gatesdk-server-cpp

./: .gitignore  CMakeLists.txt  main.cpp
dependency/protobuf/v2.4.1/: libprotobuf-lite.lib  libprotobuf-lited.lib  readme.md
dependency/protobuf/v3.7.1/: libprotobuf-lite.lib
src/: ByteBuf.cpp  ByteBuf.h  CLock.cpp  CLock.h  SocketUtil.cpp  SocketUtil.h  WaitEvent.cpp  WaitEvent.h  csgateconnection.cpp  csgateconnection.h  gateconnection.cpp  gateconnection.h  gateevents.h  servergateevents.h
src/message/: ClientSessionMessage.pb.cc  ClientSessionMessage.pb.h  ServerSessionMessage.pb.cc  ServerSessionMessage.pb.h~RF181399d.TMP
